--- a/createWorkout.html
+++ b/createWorkout.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="./styles.css" />
 		<link rel="stylesheet" href="./fontawesome-free-5.9.0-web/css/all.css" />
 		<script src="./createWorkout.js" type="module"></script>
-		<title>Routines | GymHype</title>
+		<title>Create Workout | GymHype</title>
 	</head>
 	<body class="body-relative">
 		<div class="alert" data-alertOpen='false'>
