--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="./styles.css" />
 		<link rel="stylesheet" href="../fontawesome-free-5.9.0-web/css/all.css" />
 		<script src="./routines.js" type="module"></script>
-		<title>Gym Crabs</title>
+		<title>Routines | Gym Crabs</title>
 	</head>
 	<body>
 		<div class="alert" data-alertOpen="false">
